// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should correctly segment Chinese text 1`] = `
[
  "中华人民共和国",
  "武汉市",
  "长江大桥",
]
`;

exports[`should correctly segment Chinese text 2`] = `
[
  "中华",
  "人民",
  "共和国",
  "武汉",
  "市",
  "长江",
  "大",
  "桥",
]
`;

exports[`should correctly segment English text 1`] = `
[
  "Hello",
  "World",
]
`;

exports[`should correctly segment English text 2`] = `
[
  "Hello",
  "World",
]
`;

exports[`should correctly segment mixed text 1`] = `
[
  "1972",
  "年",
  "在",
  "贝尔实验室",
  "成员",
  "布莱恩",
  "柯林",
  "汉",
  "撰写",
  "的",
  "内部",
  "技术",
  "文件",
  "A",
  "Tutorial",
  "Introduction",
  "to",
  "the",
  "Language",
  "B",
  "中",
  "首次",
  "提到",
  "了",
  "Hello",
  "World",
  "这一",
  "字符串",
]
`;

exports[`should correctly segment mixed text 2`] = `
[
  "1972",
  "年",
  "在",
  "贝尔",
  "实验",
  "室",
  "成员",
  "布",
  "莱",
  "恩",
  "柯",
  "林",
  "汉",
  "撰写",
  "的",
  "内部",
  "技术",
  "文件",
  "A",
  "Tutorial",
  "Introduction",
  "to",
  "the",
  "Language",
  "B",
  "中",
  "首次",
  "提到",
  "了",
  "Hello",
  "World",
  "这",
  "一",
  "字符",
  "串",
]
`;

exports[`should correctly segment text with URL and email 1`] = `
[
  "访问",
  "我们",
  "的",
  "官网",
  "example.com",
  "时",
  "如果",
  "您",
  "有",
  "任何",
  "问题",
  "请",
  "发送",
  "邮件",
  "至",
  "service@example.com",
  "或",
  "通过",
  "论坛",
  "test.googl",
  "联系",
  "管理员",
]
`;

exports[`should correctly segment text with URL and email 2`] = `
[
  "访问",
  "我们",
  "的",
  "官",
  "网",
  "example.com",
  "时",
  "如果",
  "您",
  "有",
  "任何",
  "问题",
  "请",
  "发送",
  "邮件",
  "至",
  "service@example.com",
  "或",
  "通过",
  "论坛",
  "test.googl",
  "联系",
  "管理",
  "员",
]
`;

exports[`should correctly split text by URL 1`] = `
[
  {
    "isURL": false,
    "text": "访问我们的官网",
  },
  {
    "isURL": true,
    "text": "example.com",
  },
  {
    "isURL": false,
    "text": "时，如果您有任何问题，请发送邮件至",
  },
  {
    "isURL": true,
    "text": "service@example.com",
  },
  {
    "isURL": false,
    "text": "或通过论坛",
  },
  {
    "isURL": true,
    "text": "test.googl",
  },
  {
    "isURL": false,
    "text": "联系管理员",
  },
]
`;

exports[`should correctly split text by URL 2`] = `
[
  {
    "isURL": false,
    "text": "访问我们的官网",
  },
  {
    "isURL": true,
    "text": "example.com",
  },
  {
    "isURL": false,
    "text": "时，如果您有任何问题，请发送邮件至",
  },
  {
    "isURL": true,
    "text": "service@example.com",
  },
  {
    "isURL": false,
    "text": "或通过论坛",
  },
  {
    "isURL": true,
    "text": "test.googl",
  },
  {
    "isURL": false,
    "text": "联系管理员",
  },
]
`;
